# moqtail

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  CONTRIBUTING.md  Cargo.toml  DEMO_COMPLETE.md  INSTALLATION.md  MOQTAIL_FFMPEG_INTEGRATION_PLAN.md  README.md  TEST_SUCCESS.md  automated-test.mjs  cbindgen.toml  lint-staged.config.js  moqtail_ffi.h  package-lock.json  package.json  simple-automated-test.mjs  simple-test.html  smpte-viewer.html
.changeset/: better-paws-battle.md  blue-carrots-wear.md  brave-tigers-dance.md  breezy-wings-clean.md  brown-worms-love.md  busy-dingos-hammer.md  busy-islands-beg.md  clean-balloons-enjoy.md  clear-hoops-relate.md  clever-clouds-exist.md  cold-ways-dress.md  cold-worms-return.md  config.json  curvy-emus-lick.md  cyan-paths-walk.md  deep-files-draw.md  delta-encode-kvp-types.md  draft-16-compliance.md  eager-bikes-train.md  eight-buses-obey.md  empty-berries-begin.md  empty-ravens-hunt.md  every-rice-bake.md  few-games-jam.md  few-kids-peel.md  fix-joining-fetch-range.md  fix-relay-fetch-ok-missing.md  fix-subgroup-header-bitmask-dispatch.md  frank-shoes-wonder.md  full-pens-admire.md  great-shrimps-grin.md  heavy-bikes-stick.md  heavy-needles-behave.md  hip-mammals-check.md  hip-rules-lick.md  humble-olives-burn.md  icy-bags-warn.md  itchy-lines-pick.md  legal-cities-thank.md  little-pianos-marry.md  (+46 more)
.devin/: wiki.json
.github/workflows/: docs.yml  js.yml  meet.yml  misc.yml  player.yml  relay.yml  release-rust.yml  release.yml  rust.yml
.husky/: commit-msg
apps/client/: CHANGELOG.md  Cargo.toml  README.md  package.json
apps/client-js/: .prettierrc  CHANGELOG.md  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
apps/client-js/public/: og
apps/client-js/src/: app.tsx  main.tsx  presets.json  types.ts  vite-env.d.ts
apps/client/src/: cli.rs  client.rs  connection.rs  fetcher.rs  main.rs  publisher.rs  stats.rs  subscriber.rs  utils.rs
apps/datagram-client/test-client/: Cargo.toml
apps/datagram-client/test-client/src/: main.rs
apps/datagram-client/test-subscriber/: Cargo.toml
apps/datagram-client/test-subscriber/src/: main.rs
apps/meet/: CHANGELOG.md  index.html  package.json  vite.config.ts
apps/meet/public/: appsettings.js
apps/meet/src/: App.tsx  (+4 more)
apps/moq-cli/: Cargo.toml  driver.py
apps/moq-cli/src/: error.rs  main.rs
apps/moq-cli/src/core/: controller.rs  media.rs  mod.rs
apps/moq-cli/src/ipc/: messages.rs  mod.rs
apps/moq-cli/tests/: manual-pub.py  publish_full_workflow.py  publish_happy_path.py  test_basic.py  test_fetch.py  test_filter.py  test_track_status.py
apps/publisher/: Cargo.toml  package.json
apps/publisher/src/: adaptive.rs  catalog.rs  cli.rs  cmaf.rs  connection.rs  decoder.rs  encoder.rs  main.rs  scaler.rs  sender.rs  video.rs
apps/relay/: CHANGELOG.md  Cargo.toml  Dockerfile  build.rs  package.json
apps/web-client/: index.html  package.json
docs/: draft16to18tasks.md
libs/moqtail-rs/: CHANGELOG.md  Cargo.toml  package.json
libs/moqtail-ts/: .gitignore  CHANGELOG.md  README.md  api-extractor.json  package.json  tsconfig.json  tsdown.config.ts  tsup.config.ts
scripts/: postversion.mjs  precommit.mjs  run-stack.sh  test-client.sh  win-env-setup.ps1  win-run-stack.ps1
(+308 files in other folders)
