[package]
name = "client"
version = "0.8.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
wtransport = { workspace = true, features = ["dangerous-configuration"] }
tokio = { version = "1.0", features = ["full"] }
serde_json = "1.0.140"
bytes = "1.10.1"
moqtail = { version = "*", path = "../../libs/moqtail-rs" }
