[package]
name = "client"
version = "0.9.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
wtransport = { workspace = true, features = ["dangerous-configuration"] }
tokio = { version = "1.0", features = ["full"] }
bytes = "1.10.1"
moqtail = { version = "*", path = "../../libs/moqtail-rs" }
clap = { version = "4.5", features = ["derive"] }
rand = "0.9"
