[package]
name = "moq-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
# Local lib
moqtail = { version = "*", path = "../../libs/moqtail-rs" }

# Async runtime
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
wtransport = { workspace = true, features = ["dangerous-configuration"] }
bytes = "1.0"

# For the interactive console input
rustyline = "12.0"
serde = "1.0.228"
serde_json = "1.0.149"
