[package]
name = "test-client"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
wtransport = "0.6.0"
tokio = { version = "1.0", features = ["full"] }
bytes = "1.10.1"
moqtail = { version = "*", path = "../../libs/moqtail-rs" }
clap = { version = "4.5.40", features = ["derive"] }
