[package]
name = "test-subscriber"
version = "0.1.0"
edition = "2021"

[dependencies]
moqtail = { path = "../../libs/moqtail-rs" }
wtransport = "0.6.0"
tokio = { version = "1.42.0", features = ["full"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bytes = "1.9.0"
clap = { version = "4.5", features = ["derive"] }
